2007-12-18 Braden McDaniel  <braden@endoframe.com>

	Call x3d_vrml_parse_error_msg in browser's error handler to get
	the error message string.

	* src/libopenvrml/openvrml/browser.cpp
	(error_handler::operator()<ScannerT,ErrorT>(const ScannerT &,
	const ErrorT &) const): Handle X3D-specific warnigns and call
	x3d_vrml_parse_error_msg to get the error message string.
	* src/libopenvrml/openvrml/x3d_vrml_grammar.h
	(openvrml::x3d_vrml_parse_error_message(vrml_parse_error)):
	Delegate to openvrml::vrml97_parse_error_msg for vrml_parse_errors
	that are not X3D-specific.

2007-12-18 Braden McDaniel  <braden@endoframe.com>

	* doc/doxygen-header: Doxygen as of 1.5.4-20071217 uses the class
	"navpath" instead of "nav".  For now, we'll do both.

2007-12-18 Braden McDaniel  <braden@endoframe.com>

	* doc/Makefile.am (DOCUMENTATION_FILES): Added gpl.doc and
	lgpl.doc.

2007-12-18 Braden McDaniel  <braden@endoframe.com>

	Call semantic actions when parsing IMPORT and EXPORT statements.

	* src/libopenvrml/openvrml/browser.cpp
	(x3d_vrml_parse_actions): Added no-op semantic actions
	on_import_statement and on_export_statement.
	* src/libopenvrml/openvrml/x3d_vrml_grammar.h
	(openvrml::null_x3d_vrml_parse_actions): Added no-op semantic
	actions on_import_statement and on_export_statement.
	(openvrml::import_statement_closure): Spirit closure used when
	parsing IMPORT statements.
	(openvrml::export_statement_closure): Spirit closure used when
	parsing EXPORT statements.
	(openvrml::x3d_vrml_grammar<Actions,ErrorHandler>::definition<ScannerT>::import_statement_rule_type):
	Rule type for import_statement incorporating
	import_statement_closure.
	(openvrml::x3d_vrml_grammar<Actions,ErrorHandler>::definition<ScannerT>::export_statement_rule_type):
	Rule type for export_statement incorporating
	export_statement_closure.
	(openvrml::x3d_vrml_grammar<Actions,ErrorHandler>::definition<ScannerT>::on_import_statement):
	Phoenix function for calling import_statement's associated